# janus-conference

./: .dockerignore  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  debug_env  deploy.init.sh  gstreamer.pipeline  janus.plugin.conference.toml  skaffold.yaml  skaffold.yml  test.sdp
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  release.yml
.semaphore/: semaphore.yml
deploy/: ca.crt  docs.sh  run.sh
docker/: Dockerfile  Dockerfile.deploy  Dockerfile.dev  dev.run.sh  develop.dockerfile  develop.run.sh  docker-compose.yml  entrypoint.sh  janus.plugin.conference.environment.sample  run.sh
docker/config/: janus.jcfg  janus.jfcg  janus.plugin.conference.toml  janus.transport.mqtt.jcfg
docs/: book.toml
docs/src/: SUMMARY.md  api.agent.leave.md  api.error.md  api.intro.md  api.md  api.reader_config.update.md  api.rtc.create.md  api.rtc.read.md  api.signal.create.md  api.signal.update.md  api.stream.create.md  api.stream.read.complete.md  api.stream.read.md  api.stream.upload.md  api.writer_config_update.md  configuration.md  implementation.md  overview.md
examples/: client.js  index.html  main.js  package-lock.json  package.json  webpack.config.js
examples/conference/: client.js  index.html
examples/echo/: client.js  index.html
examples/new/: client.js  index.html
examples/old/: index.html
examples/src/: main.js  sdp.js
k8s/: janus-gateway-service.yaml  janus-gateway.yaml
load_test/: README.md  index.html  package-lock.json  package.json
load_test/src/: main.js  sdp.js
scripts/: upload_record.sh
src/: app.rs  bidirectional_multimap.rs  codecs.rs  conf.rs  config.rs  gst_elements.rs  janus_callbacks.rs  janus_recorder.rs  janus_rtp.rs  jsep.rs  lib.rs  log_aggregator.rs  message_handler.rs  messages.rs  metrics.rs  recorder.rs  register.rs  relay.rs  serde.rs  session.rs  switchboard.rs  test_stubs.rs  uploader.rs  utils.rs
src/http/client/: create_handle.rs  create_session.rs  mod.rs  polling.rs
src/http/server/: agent_leave.rs  init.rs  mod.rs  proxy.rs  reader_config_update.rs  stream_upload.rs  writer_config_update.rs
src/message_handler/: mod.rs  operation.rs  request.rs  response.rs  router.rs
src/message_handler/generic/: mod.rs  operation.rs  request.rs  response.rs
src/message_handler/operation/: stream_create.rs  stream_read.rs  stream_upload.rs
src/message_handler/operations/: agent_leave.rs  mod.rs  reader_config_update.rs  service_ping.rs  signal_create.rs  signal_update.rs  stream_create.rs  stream_read.rs  stream_upload.rs  writer_config_update.rs
test/: janus.plugin.conference.toml
tests/: janus_client.rs  upload_test.rs
tests/files/recording/: 1560489452218.mkv
tests/testsuite/: main.rs  recording_test.rs  upload_test.rs
tests/testsuite/support/: conference_plugin_api_responses.rs  janus_client.rs  mod.rs  publisher_pipeline.rs  s3_client_wrapper.rs  test_recording.rs  test_stream.rs
(+1 files in other folders)
