[package]
name = "janus-conference"
version = "0.8.10"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
async-std = { version="1.9", features=["unstable"] }
anyhow = "1.0"
chrono = "0.4"
janus-plugin-sys = "0.7"
janus-plugin = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.10"
libc = "0.2"
multimap = "0.8"
http = "0.1"
svc-error = { version="0.1", features=["sentry-extension"] }
uuid = { version="0.8", features=["serde", "v4"] }
crossbeam-channel = "0.5"
fnv = "1"
once_cell = "1"
prometheus = "0.12"
prometheus-static-metric = "0.5"
humantime-serde = "1"
tide = "0.16"
async-oneshot = "0.5"

[dependencies.sentry]
version = "0.22"
default-features = false
features = ["anyhow", "backtrace", "contexts", "panic", "surf"]

[patch.crates-io]
janus-plugin-sys = { git="https://github.com/netology-group/janus-plugin-rs", branch="feature/api-v15" }
janus-plugin = { git="https://github.com/netology-group/janus-plugin-rs", branch="feature/api-v15" }
