[package]
name = "janus-conference"
version = "0.8.21"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
chrono = "0.4"
janus-plugin-sys = "0.8"
janus-plugin = "0.13"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
config = "0.11"
libc = "0.2"
multimap = "0.8"
http = "0.2"
svc-error = { version="0.2", features=["sentry-extension"] }
uuid = { version="0.8", features=["serde", "v4"] }
fnv = "1"
once_cell = "1"
prometheus = "0.13"
prometheus-static-metric = "0.5"
humantime-serde = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [ "json" ] }
axum = "0.2"
fure = "0.4"

[dependencies.sentry]
version = "0.23"
default-features = false
features = ["anyhow", "backtrace", "contexts", "panic"]
