[package]
name = "janus-conference"
version = "0.8.29"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
async-std = { version="1.9", features=["unstable"] }
anyhow = "1.0"
chrono = "0.4"
janus-plugin-sys = "0.8"
janus-plugin = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.11"
libc = "0.2"
multimap = "0.8"
http = "0.2"
svc-error = { version="0.2", features=["sentry-extension"] }
uuid = { version="0.8", features=["serde", "v4"] }
crossbeam-channel = "0.5"
fnv = "1"
once_cell = "1"
prometheus = "0.13"
prometheus-static-metric = "0.5"
humantime-serde = "1"
tide = "0.16"
async-oneshot = "0.5"
ureq = "2"
parking_lot = { version = "0.12" }

[dependencies.sentry]
version = "0.23"
default-features = false
features = ["anyhow", "backtrace", "contexts", "panic", "surf"]
